@@ -1944,10 +1944,10 @@ int SPVM_yylex(SPVM_YYSTYPE* yylvalp, SPVM_COMPILER* compiler) {
                   is_keyword = 1;
                   keyword_term = IS_READ_ONLY;
                 }
-                else if (strcmp(symbol_name, "implement") == 0) {
+                else if (strcmp(symbol_name, "interface") == 0) {
                   yylvalp->opval = SPVM_TOKE_new_op(compiler, SPVM_OP_C_ID_IMPLEMENT);
                   is_keyword = 1;
-                  keyword_term = IMPLEMENT;
+                  keyword_term = INTERFACE;
                 }
                 else if (strcmp(symbol_name, "int") == 0) {
                   yylvalp->opval = SPVM_TOKE_new_op(compiler, SPVM_OP_C_ID_INT);
