@@ -135,7 +135,7 @@ extern int SPVM_yydebug;
     MUTABLE = 270,
     DESCRIPTOR = 271,
     MAKE_READ_ONLY = 272,
-    IMPLEMENT = 273,
+    INTERFACE = 273,
     IF = 274,
     UNLESS = 275,
     ELSIF = 276,
@@ -587,7 +587,7 @@ static const char *const yytname[] =
 {
   "$end", "error", "$undefined", "CLASS", "HAS", "METHOD", "OUR", "ENUM",
   "MY", "USE", "AS", "REQUIRE", "ALIAS", "ALLOW", "CURRENT_CLASS",
-  "MUTABLE", "DESCRIPTOR", "MAKE_READ_ONLY", "IMPLEMENT", "IF", "UNLESS",
+  "MUTABLE", "DESCRIPTOR", "MAKE_READ_ONLY", "INTERFACE", "IF", "UNLESS",
   "ELSIF", "ELSE", "FOR", "WHILE", "LAST", "NEXT", "SWITCH", "CASE",
   "DEFAULT", "BREAK", "EVAL", "NAME", "VAR_NAME", "CONSTANT",
   "EXCEPTION_VAR", "UNDEF", "VOID", "BYTE", "SHORT", "INT", "LONG",
@@ -606,7 +606,7 @@ static const char *const yytname[] =
   "DEC", "ARROW", "':'", "';'", "'}'", "','", "')'", "']'", "$accept",
   "grammar", "opt_classes", "classes", "class", "class_block",
   "opt_declarations", "declarations", "declaration", "init_block", "use",
-  "require", "alias", "allow", "implement", "enumeration",
+  "require", "alias", "allow", "interface", "enumeration",
   "enumeration_block", "opt_enumeration_values", "enumeration_values",
   "enumeration_value", "our", "has", "method", "anon_method", "opt_args",
   "args", "arg", "opt_vaarg", "opt_descriptors", "descriptors",
