@@ -1,5 +1,5 @@
 class TestCase::InterfaceType : interface_t {
-  implement Stringable;
+  interface Stringable;
   
   method interface_shared1 : string ($num : int);
   
